검색버튼클릭효과파일이름수정

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         }
     </style>
     <!-- 검색버튼클릭효과 -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="schstyle.css" />
 </head>
 
 <body>
@@ -214,7 +214,7 @@
                         <input type="text" id="keyword" placeholder="장소 검색...">
                         <button class="ripple" onclick="searchPlaces()">검색</button>
                         <!-- 검색 버튼 클릭 효과 -->
-                        <script src="script.js"></script>
+                        <script src="schscript.js"></script>
                     </div>
                 </div>
                 <ul id="results"></ul>
