--- a/채상희.html
+++ b/채상희.html
@@ -17,7 +17,6 @@
             flex-direction: column;
             align-items: center;
             font-family: Arial, sans-serif;
-            height: 100vh;
             margin: 0;
             background-color: #f7f7f7;
         }
@@ -45,6 +44,7 @@
         #map-container {
             display: flex;
             width: 100%;
+            height: 60vh;
             flex-direction: column; /* 반응형 추가: 작은 화면에서는 세로 방향으로 정렬 */
         }
 
@@ -301,7 +301,7 @@
 
             // 현재 위치 인포윈도우
             const currentInfoWindow = new kakao.maps.InfoWindow({
-                content: '<div style="width:150px; height:23px; padding:5px; text-align:center; background-color:lightblue;">기준 위치</div>'
+                content: '<div style="width:150px; height:23px; padding:5px; text-align:center; background-color:lightblue;">현재 위치</div>'
             });
 
             // 현재 위치 마커에 마우스 오버/아웃 이벤트 추가
