--- a/채상희.html
+++ b/채상희.html
@@ -13,12 +13,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> <!-- 반응형 디자인을 위한 메타 태그 추가 -->
     <style>
         body {
+            height: 100vh;
             display: flex;
             flex-direction: column;
             align-items: center;
             font-family: Arial, sans-serif;
             margin: 0;
             background-color: #f7f7f7;
+        }
+        body > div:first-child {
+            flex: 1;
         }
 
         h1 {
@@ -29,6 +33,7 @@
         }
 
         #container {
+            flex: 5;
             display: flex;
             width: 100%;
             max-width: 1200px;
@@ -42,9 +47,9 @@
         }
 
         #map-container {
+            height: 100%;
             display: flex;
             width: 100%;
-            height: 60vh;
             flex-direction: column; /* 반응형 추가: 작은 화면에서는 세로 방향으로 정렬 */
         }
 
