index / css / js 파일 수정

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <!-- 반응형 디자인을 위한 메타 태그 추가 -->
 	<title>가까운공원찾기</title>
-	<link rel="stylesheet" href="style.css">
-	<!-- 검색버튼클릭효과 -->
 	<link rel="stylesheet" href="schstyle.css" />
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
