--- a/로드맵 버튼 추가.html
+++ b/로드맵 버튼 추가.html
@@ -301,7 +301,7 @@
         var roadviewClient = new kakao.maps.RoadviewClient(); // 좌표로부터 로드뷰 파노ID를 가져올 로드뷰 helper객체
         var toggleButton = document.getElementById('toggleRoadview');
 
-        var isRoadviewVisible = false;
+        var isRoadviewVisible = true;
 
         toggleButton.addEventListener('click', function() {
             if (isRoadviewVisible) {
