--- a/로드맵 버튼 추가.html
+++ b/로드맵 버튼 추가.html
@@ -1,10 +1,15 @@
+
 <!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8">
+   
     <title>가까운공원찾기</title>
+    
     <style>
+        /* 상단의 날씨 알림과 버튼 폰트 */
+        @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
         body {
             display: flex;
             flex-direction: column;
@@ -54,7 +59,7 @@
             padding: 10px;
             box-sizing: border-box;
             border-left: 1px solid #ccc;
-            background: #fafafa;
+            background: #fafafa
         }
 
         #search-box-container {
@@ -139,6 +144,10 @@
             font-style: italic;
             justify-content: center;
             display: none;
+            /* 폰트수정 */
+            font-family: "Jua", sans-serif;
+            font-weight: 400;
+            font-style: normal;
         }
 
         #cdanger {
@@ -150,6 +159,10 @@
             font-style: italic;
             justify-content: center;
             display: none;
+            /* 폰트수정 */
+            font-family: "Jua", sans-serif;
+            font-weight: 400;
+            font-style: normal;
         }
 
         #hot {
@@ -160,6 +173,10 @@
             font-style: italic;
             justify-content: center;
             display: none;
+            /* 폰트수정 */
+            font-family: "Jua", sans-serif;
+            font-weight: 400;
+            font-style: normal;
         }
 
         #good {
@@ -169,6 +186,10 @@
             background-color: lightgreen;
             justify-content: center;
             display: none;
+            /* 폰트수정 */
+            font-family: "Jua", sans-serif;
+            font-weight: 400;
+            font-style: normal;
         }
 
         #soso {
@@ -178,6 +199,10 @@
             background-color: lightblue;
             justify-content: center;
             display: none;
+            /* 폰트수정 */
+            font-family: "Jua", sans-serif;
+            font-weight: 400;
+            font-style: normal;
         }
 
         #cold {
@@ -188,6 +213,10 @@
             font-style: italic;
             justify-content: center;
             display: none;
+            /* 폰트수정 */
+            font-family: "Jua", sans-serif;
+            font-weight: 400;
+            font-style: normal;
         }
         #toggleRoadview {
             position: absolute;
@@ -201,6 +230,10 @@
             border: none; /* 버튼 테두리 제거 */
             border-radius: 5px; /* 버튼 모서리 둥글게 */
             cursor: pointer; /* 커서를 포인터로 변경 */
+            /* 폰트 수정 */
+            font-family: "Jua", sans-serif;
+            font-weight: 400;
+            font-style: normal;
         }
     </style>
 </head>
