스타일 스크립 인덱스 수정

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <!-- 반응형 디자인을 위한 메타 태그 추가 -->
+	<!-- 반응형 디자인을 위한 메타 태그 추가 -->
 	<title>가까운공원찾기</title>
 	<link rel="stylesheet" href="schstyle.css" />
 	<link rel="stylesheet" href="style.css">
@@ -21,7 +21,9 @@
 	</div>
 	<div id="container">
 		<div id="map-container">
-			<div id="map"></div>
+			<div id="map">
+				<button id="panto" onclick="panTo();">+</button>
+			</div>
 			<div id="results-container">
 				<!-- 검색창을 오른쪽에 배치하기 위한 컨테이너 -->
 				<div id="search-box-container">
