--- a/로드맵 버튼 추가.html
+++ b/로드맵 버튼 추가.html
@@ -234,6 +234,10 @@
             font-family: "Jua", sans-serif;
             font-weight: 400;
             font-style: normal;
+            transition: background-color 0.5s ease;
+        }
+        #toggleRoadview:active {
+            background-color: green; /* 버튼 클릭 시 배경색 */
         }
     </style>
 </head>
