내 위치로 이동

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 	<div id="container">
 		<div id="map-container">
 			<div id="map">
-				<button id="panto" onclick="panTo();">+</button>
+				<p>
+					<button onclick="panTo()" id="panTo">+</button>
+				</p>
 			</div>
 			<div id="results-container">
 				<!-- 검색창을 오른쪽에 배치하기 위한 컨테이너 -->
