--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 		<div id="map-container">
 			<div id="map">
 				<p>
-					<button onclick="panTo()" id="panTo">+</button>
+					<!-- 현위치로 돌아가는 버튼 -->
+					<button onclick="panTo()" id="panTo"><img src ='me.png'></button>
 				</p>
 			</div>
 			<div id="results-container">
