--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 				<p>
 					<!-- 현위치로 돌아가는 버튼 -->
 					<button onclick="panTo()" id="panTo"><img src ='me.png'></button>
+					<!-- <a href="https://www.flaticon.com/kr/free-icons/" title="위치 아이콘">위치 아이콘 제작자: IconMarketPK - Flaticon</a> -->
 				</p>
 			</div>
 			<div id="results-container">
