index가 메인화면으로 감으로 인해 파일명 변경 i

--- a/index.html
+++ b/index.html
@@ -1,53 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<!-- 반응형 디자인을 위한 메타 태그 추가 -->
-	<title>가까운공원찾기</title>
-	<link rel="stylesheet" href="schstyle.css" />
-	<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>가까운 공원 찾기</title>
+    <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Dongle&display=swap" rel="stylesheet">
 </head>
 
 <body>
-	<div>
-		<h1 id="danger"></h1>
-		<h1 id="hot"></h1>
-		<h1 id="good"></h1>
-		<h1 id="soso"></h1>
-		<h1 id="cold"></h1>
-		<h1 id="cdanger"></h1>
-	</div>
-	<div id="container">
-		<div id="map-container">
-			<div id="map">
-				<p>
-					<!-- 현위치로 돌아가는 버튼 -->
-					<button onclick="panTo()" id="panTo"><img src ='./background/me.png'></button>
-					<!-- <a href="https://www.flaticon.com/kr/free-icons/" title="위치 아이콘">위치 아이콘 제작자: IconMarketPK - Flaticon</a> -->
-				</p>
-			</div>
-			<div id="results-container">
-				<!-- 검색창을 오른쪽에 배치하기 위한 컨테이너 -->
-				<div id="search-box-container">
-					<div id="search-box">
-						<input type="text" id="keyword" placeholder="장소 검색...">
-						<button class="ripple" onclick="searchPlaces()">검색</button>
-						<!-- 검색 버튼 클릭 효과 -->
-						<script src="schscript.js"></script>
-					</div>
-				</div>
-				<ul id="results"></ul>
-			</div>
-		</div>
-	</div>
+        <h1>주변공원찾기</h1>
+        <section class="start-button-container">
+            <img src="background/right-arrow.png" alt="시작하기" class="start-button" onclick="startApp()">
+        </section>
+    </main>
 
-	<script type="text/javascript"
-		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=41ce8b9519ec9b48b457759b6dff0a54&libraries=services"></script>
-	<script type="text/javascript" src="parkdata.js"></script> <!-- parkdata.js 파일 불러오기 -->
-	<script src="common.js"></script>
-
+    <script>
+        function startApp() {
+            window.location.href = 'restpark.html'; // 기존 프로그램의 HTML 파일명으로 변경
+        }
+    </script>
 </body>
 
-</html>
