타이틀 맞춤

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-        <h1>주변공원찾기</h1>
+        <h1>가까운공원찾기</h1>
         <section class="start-button-container">
             <img src="background/right-arrow.png" alt="시작하기" class="start-button" onclick="startApp()">
         </section>
