letgo기존index파일에 적용

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 
 <body>
-        <h1>가까운공원찾기</h1>
+        <h1>산책<br>가자</h1>
         <section class="start-button-container">
-            <img src="background/right-arrow.png" alt="시작하기" class="start-button" onclick="startApp()">
+            <button class="start-button" onclick="startApp()">
+                let's go
         </section>
     </main>
 
