--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
         <section class="start-button-container">
             <button class="start-button" onclick="startApp()">
                 let's go
+            </button>
         </section>
-        </div>
+    </div>
 
 
     <script>
-       function startApp() {
+        function startApp() {
             const container = document.getElementById('page-container');
             container.classList.add('slide-out'); // 슬라이드 아웃 클래스 추가
             setTimeout(() => {
@@ -29,5 +30,5 @@
         }
     </script>
 </body>
-</html>
 
+</html>
