--- a/restpark.html
+++ b/restpark.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html>
 
 <head>
 	<meta charset="utf-8">
@@ -26,15 +26,15 @@
 					<i class="fas fa-times"></i>
 				</button>
 				<ul class="list">
-					<div id="results-container">
-							<div id="search-box">
-								<input type="text" id="keyword" placeholder="장소 검색...">
-								<button class="ripple" onclick="searchPlaces()">검색</button>
-								<!-- 검색 버튼 클릭 효과 -->
-								<script src="schscript.js"></script>
-							</div>
-						<ul id="results"></ul>
+					<div id="search-box-container">
+						<div id="search-box">
+							<input type="text" id="keyword" placeholder="장소 검색...">
+							<button class="ripple" onclick="searchPlaces()">검색</button>
+							<!-- 검색 버튼 클릭 효과 -->
+							<script src="schscript.js"></script>
+						</div>
 					</div>
+					<ul id="results"></ul>
 				</ul>
 			</div>
 		</div>
