검색창 재수정

--- a/restpark.html
+++ b/restpark.html
@@ -24,17 +24,19 @@
 			<div class="nav nav-white">
 				<button class="nav-btn close-btn">
 					<i class="fas fa-times"></i>
-				</button>
-				<ul class="list">
-					<div id="search-box-container">
-						<div id="search-box">
-							<input type="text" id="keyword" placeholder="장소 검색...">
-							<button class="ripple" onclick="searchPlaces()">검색</button>
-							<!-- 검색 버튼 클릭 효과 -->
-							<script src="schscript.js"></script>
+				</button><ul class="list">
+					<div id="results-container">
+						<!-- 검색창을 오른쪽에 배치하기 위한 컨테이너 -->
+						<div id="search-box-container">
+							<div id="search-box">
+								<input type="text" id="keyword" placeholder="장소 검색...">
+								<button class="ripple" onclick="searchPlaces()">검색</button>
+								<!-- 검색 버튼 클릭 효과 -->
+								<script src="schscript.js"></script>
+							</div>
 						</div>
+						<ul id="results"></ul>
 					</div>
-					<ul id="results"></ul>
 				</ul>
 			</div>
 		</div>
