--- a/restpark.html
+++ b/restpark.html
@@ -16,6 +16,15 @@
 </head>
 
 <body>
+	<!-- 웹페이지 단축키 툴팁 오른쪽하단 -->
+	<div class="help-icon" id="help-icon">?</div>
+	<div class="tooltip" id="tooltip">
+		<p>단축키 안내:</p>
+		<ul>
+			<li><b>Tab</b>: 네비게이션 메뉴 열기</li>
+			<li><b>Esc</b>: 네비게이션 메뉴 닫기</li>
+		</ul>
+	</div>
 	<button class="nav-btn open-btn">
 		<i class="fas fa-bars"></i>
 	</button>
