--- a/restpark.html
+++ b/restpark.html
@@ -45,6 +45,7 @@
 		<h1 id="good"></h1>
 		<h1 id="soso"></h1>
 		<h1 id="cold"></h1>
+		<h1 id="cdanger"></h1>
 	</div>
 	<div id="container">
 		<div id="map-container">
