--- a/restpark.html
+++ b/restpark.html
@@ -12,7 +12,6 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
 		integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
 		crossorigin="anonymous" />
-	<link rel="stylesheet" href="thlinestyle.css" />
 </head>
 
 <body>
@@ -55,6 +54,9 @@
 		<h1 id="soso"></h1>
 		<h1 id="cold"></h1>
 		<h1 id="cdanger"></h1>
+		<div>
+			<img src="./background/산책가자3.png" alt="logo" id="logo">
+		</div>
 	</div>
 	<div id="container">
 		<div id="map-container">
@@ -72,7 +74,6 @@
 		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=41ce8b9519ec9b48b457759b6dff0a54&libraries=services"></script>
 	<script type="text/javascript" src="parkdata.js"></script> <!-- parkdata.js 파일 불러오기 -->
 	<script src="common.js"></script>
-	<script src="thlinescrip.js"></script>
 
 </body>
 
