로고 주석처리

--- a/restpark.html
+++ b/restpark.html
@@ -55,7 +55,7 @@
 		<h1 id="cold"></h1>
 		<h1 id="cdanger"></h1>
 		<div>
-			<img src="./background/산책가자3.png" alt="logo" id="logo">
+			<!-- <img src="./background/산책가자3.png" alt="logo" id="logo"> -->
 		</div>
 	</div>
 	<div id="container">
