--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <div id="page-container">
         <h1>산책<br>가자</h1>
         <section class="start-button-container">
-            <button class="start-button" onclick="startApp()">
-                let's go
+            <img src="background/playcircle.png" class="start-button" onclick="startApp()">
             </button>
         </section>
     </div>
