--- a/restpark.html
+++ b/restpark.html
@@ -20,8 +20,8 @@
 	<div class="tooltip" id="tooltip">
 		<p>단축키 안내:</p>
 		<ul>
-			<li><b>Tab</b>: 네비게이션 메뉴 열기</li>
-			<li><b>Esc</b>: 네비게이션 메뉴 닫기</li>
+			<li><b>Tab</b>: 검색창 열기</li>
+			<li><b>Esc</b>: 검색창 닫기</li>
 		</ul>
 	</div>
 	<button class="nav-btn open-btn">
