--- a/restpark.html
+++ b/restpark.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
 		integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
 		crossorigin="anonymous" />
+	<link rel="stylesheet" href="thlinestyle.css" />
 	<link rel="stylesheet" href="scroll-anistyle.css" />
 </head>
 
@@ -21,8 +22,8 @@
 	<div class="tooltip" id="tooltip">
 		<p>단축키 안내:</p>
 		<ul>
-			<li><b>Tab</b>: 검색창 열기</li>
-			<li><b>Esc</b>: 검색창 닫기</li>
+			<li><b>Tab</b>: 네비게이션 메뉴 열기</li>
+			<li><b>Esc</b>: 네비게이션 메뉴 닫기</li>
 		</ul>
 	</div>
 	<button class="nav-btn open-btn">
@@ -55,9 +56,6 @@
 		<h1 id="soso"></h1>
 		<h1 id="cold"></h1>
 		<h1 id="cdanger"></h1>
-		<div>
-			<!-- <img src="./background/산책가자3.png" alt="logo" id="logo"> -->
-		</div>
 	</div>
 	<div id="container">
 		<div id="map-container">
