--- a/restpark.html
+++ b/restpark.html
@@ -73,6 +73,7 @@
 		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=41ce8b9519ec9b48b457759b6dff0a54&libraries=services"></script>
 	<script type="text/javascript" src="parkdata.js"></script> <!-- parkdata.js 파일 불러오기 -->
 	<script src="common.js"></script>
+	<script src="thlinescrip.js"></script>
 
 </body>
 
