--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div id="page-container">
         <h1>산책<br>가자</h1>
         <section class="start-button-container">
-            <img src="background/playcircle.png" class="start-button" onclick="startApp()">
+            <button class="start-button" onclick="startApp()">
+                let's go
             </button>
         </section>
     </div>
