--- a/restpark.html
+++ b/restpark.html
@@ -74,6 +74,9 @@
 	<script type="text/javascript" src="parkdata.js"></script> <!-- parkdata.js 파일 불러오기 -->
 	<script src="common.js"></script>
 	<script src="thlinescrip.js"></script>
+	<footer>
+        <p>길찾기 경로는 차량 기준입니다.</p>
+    </footer>
 </body>
 
 </html>
