--- a/restpark.html
+++ b/restpark.html
@@ -12,7 +12,6 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
 		integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
 		crossorigin="anonymous" />
-
 </head>
 
 <body>
@@ -21,8 +20,8 @@
 	<div class="tooltip" id="tooltip">
 		<p>단축키 안내:</p>
 		<ul>
-			<li><b>Tab</b>: 네비게이션 메뉴 열기</li>
-			<li><b>Esc</b>: 네비게이션 메뉴 닫기</li>
+			<li><b>Tab</b>: 현위치 초기화</li>
+			<li><b>Esc</b>: 네비게이션 메뉴</li>
 		</ul>
 	</div>
 	<button class="nav-btn open-btn">
@@ -72,9 +71,6 @@
 		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=41ce8b9519ec9b48b457759b6dff0a54&libraries=services"></script>
 	<script type="text/javascript" src="parkdata.js"></script> <!-- parkdata.js 파일 불러오기 -->
 	<script src="common.js"></script>
-	<footer>
-        <p>길찾기 경로는 차량 기준입니다.</p>
-    </footer>
 </body>
 
 </html>
