--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             const container = document.getElementById('page-container');
             container.classList.add('slide-out'); // 슬라이드 아웃 클래스 추가
             setTimeout(() => {
-                window.location.href = 'restpark.html'; // 기존 프로그램의 HTML 파일명으로 변경
+                window.location.href = 'loading.html'; // 기존 프로그램의 HTML 파일명으로 변경
             }, 1000); // 1초 후 페이지 전환
         }
     </script>
