--- a/restpark.html
+++ b/restpark.html
@@ -20,8 +20,8 @@
 	<div class="tooltip" id="tooltip">
 		<p>단축키 안내:</p>
 		<ul>
-			<li><b>Tab</b>: 현위치 초기화</li>
-			<li><b>Esc</b>: 네비게이션 메뉴</li>
+			<li><b>Tab</b>: 네비게이션 메뉴 열기</li>
+			<li><b>Esc</b>: 네비게이션 메뉴 닫기</li>
 		</ul>
 	</div>
 	<button class="nav-btn open-btn">
@@ -72,8 +72,8 @@
 	<script type="text/javascript" src="parkdata.js"></script> <!-- parkdata.js 파일 불러오기 -->
 	<script src="common.js"></script>
 	<footer>
-		<p>길찾기 경로는 차량 기준입니다.</p>
-	</footer>
+        <p>길찾기 경로는 차량 기준입니다.</p>
+    </footer>
 </body>
 
 </html>
