공원페이지 풋터 다시 변경 / 지도 하단 여백 재조정

--- a/loading.html
+++ b/loading.html
@@ -6,6 +6,7 @@
     <title>로딩화면</title>
     <link rel="stylesheet" href="loading.css">
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+    <link rel="prefetch" href="restpark.html">
 </head>
 <body>
     <!-- 로딩 화면을 나타내는 요소 -->
