단축키가 돌아가서 다시 수정함

--- a/restpark.html
+++ b/restpark.html
@@ -21,8 +21,8 @@
 	<div class="tooltip" id="tooltip">
 		<p>단축키 안내:</p>
 		<ul>
-			<li><b>Tab</b>: 네비게이션 메뉴 열기</li>
-			<li><b>Esc</b>: 네비게이션 메뉴 닫기</li>
+			<li><b>Tab</b>: 위치 초기화</li>
+			<li><b>Esc</b>: 네비게이션 메뉴</li>
 		</ul>
 	</div>
 	<button class="nav-btn open-btn">
