단축키 안내 ":" 제거

--- a/restpark.html
+++ b/restpark.html
@@ -19,7 +19,7 @@
 	<!-- 웹페이지 단축키 툴팁 오른쪽하단 -->
 	<div class="help-icon" id="help-icon">?</div>
 	<div class="tooltip" id="tooltip">
-		<p>단축키 안내:</p>
+		<p>단축키 안내</p>
 		<ul>
 			<li><b>Tab</b>: 위치 초기화</li>
 			<li><b>Esc</b>: 네비게이션 메뉴</li>
