--- a/loading.html
+++ b/loading.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>로딩화면</title>
-    <link rel="stylesheet" href="loading.css">
+    <link rel="stylesheet" href="/css/loading.css">
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
     <link rel="prefetch" href="restpark.html">
 </head>
@@ -14,6 +14,6 @@
         <div class="loader"></div>
         <p id="loading-text">로딩중...</p>     
     </div>
-    <script src="loading.js"></script>
+    <script src="./js/loading.js"></script>
 </body>
 </html>
