--- a/restpark.html
+++ b/restpark.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<!-- 반응형 디자인을 위한 메타 태그 추가 -->
 	<title>가까운공원찾기</title>
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Cute+Font&family=Jua&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Dongle&display=swap" rel="stylesheet">
 	<!-- 삼선목록 -->
@@ -59,7 +59,7 @@
 			<div id="map">
 				<p>
 					<!-- 현위치로 돌아가는 버튼 -->
-					<button onclick="panTo()" id="panTo"><img src='./background/me.png'></button>
+					<button onclick="panTo()" id="panTo"><img src='background/me.png'></button>
 					<!-- <a href="https://www.flaticon.com/kr/free-icons/" title="위치 아이콘">위치 아이콘 제작자: IconMarketPK - Flaticon</a> -->
 				</p>
 			</div>
@@ -68,8 +68,8 @@
 
 	<script type="text/javascript"
 		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=41ce8b9519ec9b48b457759b6dff0a54&libraries=services"></script>
-	<script type="text/javascript" src="/js/parkdata.js"></script> <!-- parkdata.js 파일 불러오기 -->
-	<script src="/js/common.js"></script>
+	<script type="text/javascript" src="js/parkdata.js"></script> <!-- parkdata.js 파일 불러오기 -->
+	<script src="js/common.js"></script>
 	<footer>
 		<p>길찾기 경로는 차량 기준입니다.</p>
 	</footer>
