--- a/loading.html
+++ b/loading.html
@@ -14,6 +14,6 @@
         <div class="loader"></div>
         <p id="loading-text">로딩중...</p>     
     </div>
-    <script src="./js/loading.js"></script>
+    <script src="js/loading.js"></script>
 </body>
 </html>
